--- a/Curriculum/Curriculum/Info.plist
+++ b/Curriculum/Curriculum/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>Backend Base URL</key>
+	<string>$(BASE_URL)</string>
 </dict>
 </plist>
